# interactive-chat-ai

./: .gitignore  ARCHITECTURE_VISUAL_GUIDE.md  COMPLETION_SUMMARY.txt  EXECUTION_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  PER_PROFILE_SETTINGS_SUMMARY.md  PHASE_3_DELIVERY.md  PROFILE_SETTINGS_QUICK_REF.md  QUICK_START.md  README_HUMAN_SPEAKING_LIMIT.md  SIGNAL_PARSING_FIX_SUMMARY.md  debug.txt  download_piper.py  file_checker.py  for_llm.md  gradio_demo.py  main.ipynb  main.py  output.txt  project_description.md  project_summary_for_llm.md  pyproject.toml  test.ipynb  test_api_integration.py  test_human_limit.py  test_interruption_actuation.py  test_main_profiles.py  test_output.txt  test_phase_profiles.py  test_profiles.py  verify_signal_parsing_fix.py
docs/: ANALYTICS_COMPLETION.md  ANALYTICS_INTEGRATION_SUMMARY.md  ANALYTICS_QUICK_REF.md  API_PHASE_1.md  DOCUMENTATION_INDEX.md  FEATURE_COMPLETE.md  GARBAGE_OUTPUT_FIXES.md  GRADIO_6_COMPATIBILITY.md  GRADIO_DEMO.md  HEADLESS_TESTING_DELIVERY.md  HEADLESS_TESTING_GUIDE.md  HEADLESS_TESTING_QUICK_START.md  HEADLESS_TESTING_SUMMARY.md  HOW_TO_RUN_WITH_GRADIO.md  HUMAN_SPEAKING_LIMIT_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.txt  LEGACY_TESTS_CLEANUP.md  PHASED_AI_GUIDE.md  PHASED_AI_QUICK_REF.md  PHASE_1_COMPLETION.md  PHASE_2.md  PHASE_2_CHECKLIST.md  PHASE_2_COMPLETION.md  PHASE_3_COMPLETION.md  PHASE_3_STATUS.md  PHASE_4_COMPLETION.md  PHASE_ANALYTICS_UPDATE.md  PROFILE_SETTINGS.md  QUICK_TEST_GUIDE.md  README.md  SIGNALS_EXAMPLES.py  SIGNALS_IMPLEMENTATION_COMPLETE.md  SIGNALS_LLM_QUICK_REF.md  (+11 more)
(+60 files in other folders)
