[project]
name = "interactive-chat-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "faster-whisper>=1.2.1",
    "huggingface-hub>=1.3.4",
    "numpy>=2.4.1",
    "sounddevice>=0.5.5",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "transformers>=5.0.0",
    "vosk>=0.3.45",
]

[tool.uv.workspace]
members = [
    "piper-python",
]
